--- a/templates/admin/email_signature/email_signature_edit.html
+++ b/templates/admin/email_signature/email_signature_edit.html
@@ -14,14 +14,13 @@
         <div class="col-md-4 active-app"><i class="fa fa-envelope section-icon"></i>
             Email Signature
         </div>
-        <a class="btn red save-btn pull-right" id="customButton" href=""
-           ng-click="addSignature()">
+        <a class="btn red save-btn pull-right" id="customButton" ng-click="addSignature()">
             <i class="fa fa-floppy-o"></i> {{_("Save")}}
         </a>
     </div>
 </div>
 <div class="page-content admin-content">
-    <div class="loader-container row" ng-show="false">
+    <div class="loader-container row" ng-show="isLoading">
         <div class="loader-dialog col-md-4 col-md-offset-4 ">
             <div class="loader-content">
                 {{ _('Loading...') }}
@@ -42,21 +41,32 @@
                 <h3 style="display: inline">Signature</h3>
                 <i class="material-icons" style="font-size: 19px">edit</i>
 
-                <p> This signature will appear in all mail you send from iogrow <br> You've connected ioGrow to <b>{{user.email}}</b>
+                <p> This signature will appear in all mail you send from iogrow <br> You've connected ioGrow to <b>
+                    {{user.email}}</b>
                     .</p>
 
                 <p><b>Signature</b></p>
 
                 <form class="ng-pristine ng-invalid ng-invalid-required">
                     <div class="form-group text-form-group">
-                                <textarea id="signature_textarea" placeholder="{{_('Enter text ...')}}"
-                                          class="form-control" rows="7">
-                                </textarea>
+                        <textarea id="signature_textarea" placeholder="{{_('Enter text ...')}}" class="form-control"
+                                  rows="7" >
+                        </textarea>
                     </div>
                 </form>
             </div>
-
-
         </div>
     </div>
 </div>
+<!--
+<textarea id="sig_textarea" placeholder="{{_('Enter text ...')}}" class="form-control"
+          rows="7">
+                        </textarea>
+<script>
+    if ($('#sig_textarea').size() > 0) {
+        $('#sig_textarea').wysihtml5({
+                "stylesheets": ["static/build/css/wysiwyg-color.css"]
+        });
+    }
+
+</script>-->
