--- a/templates/admin/lead_status/lead_status_edit.html
+++ b/templates/admin/lead_status/lead_status_edit.html
@@ -14,7 +14,11 @@
         <div class="col-md-4 active-app"><i class="fa fa-user section-icon"></i>
             Leads Status Settings
         </div>
-        <a class="btn red save-btn pull-right" href="" ng-click="addSignature()">
+        <!--<pre><%= nbrSelected %></pre>-->
+        <a class="btn" ng-show="nbrSelected > 1" ng-click="deleteSelected()">
+            <i class="fa fa-trash-o"></i>
+        </a>
+        <a class="btn red save-btn pull-right" href="" ng-click="addLeadsStatusModal()">
             <i class="fa fa-plus"></i> {{ _('New') }}
         </a>
     </div>
@@ -41,7 +45,7 @@
                     <thead>
                     <tr>
                         <th class="col-md-1">
-                            <input title='{{ _("Select all Users") }}' type="checkbox" ng-checked="isSelectedAll">
+                            <input type="checkbox"  ng-model="isSelectedAll">
                         </th>
                         <th class="col-md-8">
                             <a href="" ng-click="filterByName()"> {{ _('Name') }}</a>
@@ -49,15 +53,14 @@
                             <i class="fa fa-caret-down" ng-show="predicate == 'google_display_name'"></i>
                         </th>
                         <th class="col-md-3">
-                            <a href="" ng-click="predicate = 'email'; reverse=false"> {{ _('Updated') }}</a>
+                            <a href="" ng-click="predicate = 'email'; reverse=false"> {{ _('Actions') }}</a>
                         </th>
                     </tr>
                     </thead>
                     <tbody>
                     <tr ng-repeat="leadState in leadstatuses">
                         <td style="padding: 20px 8px;">
-                            <input type="checkbox" ng-click="leadState.isSelected = !leadState.isSelected"
-                                   ng-checked="leadState.isSelected">
+                            <input type="checkbox" ng-click="deleteSelected(leadState)" ng-checked="leadState.isSelected">
                         </td>
                         <td style="padding: 20px 5px;">
                             <span style="margin-right: 10px">
@@ -66,7 +69,8 @@
                             <%= leadState.status %>
                         </td>
                         <td style="padding: 20px 5px;">
-                            <%= '5 min ago' %>
+                            <a class="btn" ng-click="editleadstatus(leadState)"><i class="material-icons">mode_edit</i></a>
+                            <a class="btn" ng-click="deletleadstatus(leadState)"><i class="material-icons">delete</i></a>
                         </td>
                     </tr>
                     </tbody>
@@ -76,7 +80,7 @@
     </div>
 </div>
 
-<div id="addLeadstatustModal" class="modal fade" tabindex="-1" role="dialog" aria-labelledby="myModalLabel"
+<div id="addLeadsStatusModal" class="modal fade" tabindex="-1" role="dialog" aria-labelledby="myModalLabel"
      aria-hidden="true">
     <div class="modal-dialog">
         <div class="modal-content">
@@ -96,7 +100,7 @@
                 </div>
                 <div class="modal-footer">
                     <button class="btn" data-dismiss="modal" aria-hidden="true">{{_("Cancel")}}</button>
-                    <button type="submit" class="btn green" ng-click="saveLeadtatus(lead)">{{_("Add Lead Status")}}
+                    <button type="submit" class="btn green" ng-click="saveLeadStatus(lead)">{{_("Add Lead Status")}}
                     </button>
                 </div>
             </form>
@@ -110,7 +114,6 @@
      aria-hidden="true">
     <div class="modal-dialog">
         <div class="modal-content">
-
             <div class="modal-header">
                 <button type="button" class="close" data-dismiss="modal" aria-hidden="true">×</button>
                 <h3>{{_("Edit Lead status")}}</h3>
