--- a/templates/base.html
+++ b/templates/base.html
@@ -427,7 +427,7 @@ mixpanel.init("c36aa57ab10237c2b1c3d4d9c5f751bc");</script><!-- end Mixpanel -->
      }
      var ROOT = getRoot();
 
-     // ROOT = 'https://gcdc2013-iogrow.appspot.com/_ah/api';
+      ROOT = 'https://gcdc2013-iogrow.appspot.com/_ah/api';
 
 
   //  var ROOT = '/_ah/api';
