--- a/templates/opportunities/opportunity_show.html
+++ b/templates/opportunities/opportunity_show.html
@@ -546,7 +546,7 @@
                               </div>
                         <div class="news-block-tags">
                                 <div class="form-group row">
-                                  <label class="control-label col-md-4"><i class="fa fa-clock-o "></i> {{ _(' Time scale')}}</label>
+                                  <label class="control-label col-md-4"><i class="fa fa-clock-o "></i> {{ _(' Decision process Timeline')}}</label>
                                    <div class="col-md-8">
                                        <a href="" ng-click="showAddTimeScale()" style="cursor:pointer">
                                            + <i class="fa fa-calendar" style="font-size:13px"></i> Add an event</a>
