test lead and case status settings
Former-commit-id: 137233ed09eab4b47a79306ea0936e484c929674 [formerly 949e92d0cccfb5e5abe491fa8d3462f1265e7814] [formerly 8321d7a9db44337eca3f39387843c57ed3dfacee [formerly a4e6cbc76accbad878773dd400eb30c23e012299]]
Former-commit-id: af6e505f4c4151df3a48689d67cddfa687d5db40 [formerly f44892dc91a8a9b303b235c61747122a791c20cc]
Former-commit-id: 51b633eae8f809cdafeff01e27d4f72fad686fe8

--- a/templates/admin/case_status/case_status_edit.html
+++ b/templates/admin/case_status/case_status_edit.html
@@ -113,7 +113,7 @@
                 <button type="button" class="close" data-dismiss="modal" aria-hidden="true">×</button>
                 <h3>{{_("New Case Status")}}</h3>
             </div>
-            <form name="addcasestatus" class="form-horizontal">
+            <!--<form name="addcasestatus" class="form-horizontal">-->
                 <div class="modal-body">
                     <fieldset>
                         <div class="form-group">
@@ -129,7 +129,7 @@
                         Status")}}
                     </button>
                 </div>
-            </form>
+            <!--</form>-->
         </div>
     </div>
 </div>
@@ -143,7 +143,7 @@
                 <button type="button" class="close" data-dismiss="modal" aria-hidden="true">×</button>
                 <h3>{{_("Edit Case Status")}}</h3>
             </div>
-            <form name="addcasestatus" class="form-horizontal">
+            <!--<form name="addcasestatus" class="form-horizontal">-->
                 <div class="modal-body">
 
                     <fieldset>
@@ -158,7 +158,7 @@
                     <button type="submit" class="btn green" ng-click="updateCasestatus(casestatusedit)">{{_("Save")}}
                     </button>
                 </div>
-            </form>
+            <!--</form>-->
         </div>
     </div>
 </div>
