--- a/templates/admin/lead_status/lead_status_edit.html
+++ b/templates/admin/lead_status/lead_status_edit.html
@@ -60,7 +60,7 @@
                     <tbody>
                     <tr ng-repeat="leadState in leadstatuses">
                         <td style="padding: 20px 8px;">
-                            <input type="checkbox" ng-click="deleteSelected(leadState)" ng-checked="leadState.isSelected">
+                            <input type="checkbox" ng-click="selectStatus(leadState)" ng-checked="leadState.isSelected">
                         </td>
                         <td style="padding: 20px 5px;">
                             <span style="margin-right: 10px">
@@ -88,9 +88,7 @@
                 <button type="button" class="close" data-dismiss="modal" aria-hidden="true">×</button>
                 <h3>{{_("New Lead status")}}</h3>
             </div>
-            <form name="addleadstatus" class="form-horizontal">
                 <div class="modal-body">
-
                     <fieldset>
                         <div class="form-group">
                             <label class="required control-label">{{_("Lead Status")}} *</label>
@@ -100,10 +98,9 @@
                 </div>
                 <div class="modal-footer">
                     <button class="btn" data-dismiss="modal" aria-hidden="true">{{_("Cancel")}}</button>
-                    <button type="submit" class="btn green" ng-click="saveLeadStatus(lead)">{{_("Add Lead Status")}}
+                    <button class="btn green" ng-click="saveLeadStatus(lead)">{{_("Add Lead Status")}}
                     </button>
                 </div>
-            </form>
         </div>
     </div>
 </div>
@@ -118,7 +115,7 @@
                 <button type="button" class="close" data-dismiss="modal" aria-hidden="true">×</button>
                 <h3>{{_("Edit Lead status")}}</h3>
             </div>
-            <form name="addleadstatus" class="form-horizontal">
+            <!--<form name="addleadstatus" class="form-horizontal">-->
                 <div class="modal-body">
                     <fieldset>
                         <div class="form-group">
@@ -132,7 +129,7 @@
                     <button class="btn" data-dismiss="modal" aria-hidden="true">{{_("Cancel")}}</button>
                     <button type="submit" class="btn green" ng-click="updateLeadstatus(leadstat)">{{_("Save")}}</button>
                 </div>
-            </form>
+            <!--</form>-->
         </div>
     </div>
 </div>
